--- a/ogani-master/ogani-master/admin/product/style.css
+++ b/ogani-master/ogani-master/admin/product/style.css
@@ -30,6 +30,7 @@ h1 {
 #product-table td {
     border: 1px solid #ddd;
     padding: 8px;
+    text-align: center;
 }
 
 #product-table th {
@@ -50,3 +51,17 @@ h1 {
 .actions button {
     padding: 5px 10px;
 }
+.page-link {
+    margin-top: 10px;
+}
+
+.table-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; Tuỳ chỉnh độ cao của bảng */
+  }
+  
+  /* table { */
+    /* Tuỳ chỉnh các thuộc tính khác của bảng */
+  /* } */
