--- a/ogani-master/ogani-master/css/style.css
+++ b/ogani-master/ogani-master/css/style.css
@@ -3528,3 +3528,11 @@ ol {
 }
 /* .papage-link a{
 } */
+/* .latest1 {
+	display: block;
+	background-color: #f2f2f2;
+    padding: 10px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    color: #333;
+} */
